<resources>
    <string name="app_name">bemyrider</string>
    <string name="signup">Sign Up</string>
    <string name="username">User Name</string>
    <string name="login">LOGIN</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot"><u>Forgot password?</u></string>
    <string name="password">Password*</string>
    <string name="provide_uname">Please Provide Email.</string>
    <string name="provide_valid_uname">Please Provide Valid Email.</string>
    <string name="provide_pass">Please Provide Password</string>
    <string name="provide_address">Please Provide Address</string>
    <string name="provide_pass_length">Minimum Password length is six</string>
    <string name="fb_error">Error. Please provide all the required details via facebook.</string>
    <string name="signup_with_email">Error. Please sign up with email.</string>
    <string name="facebook_app_id" translatable="false">497104782137385</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb497104782137385</string>
    <string name="facebook_client_token" translatable="false">59590fb4b4cbae3b4091dd6c9907ef19</string>
    <string name="connection_time_out">Connection has timed out. Do you want to retry?</string>
    <string name="unexpected_error">Unexpected error has occurred</string>
    <string name="error">Error!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="connect_account">Connect Account?</string>
    <string name="loading">Loading...</string>
    <string name="wait_while_loading">Please Wait While Loading</string>
    <string name="no_internet">No Internet Connection.</string>
    <string name="first_name">Manager name*</string>
    <string name="last_name">Last Name*</string>
    <string name="email_id">Email*</string>
    <string name="number">Contact No*</string>
    <string name="confirmpassword">Confirm Password*</string>
    <string name="provide_fname">Please Provide First Name.</string>
    <string name="provide_lname">Please Provide Last Name.</string>
    <string name="provide_number">Please Provide Contact No.</string>
    <string name="cpass_not_match">Password and Confirm Password dose not match.</string>
    <string name="provide_country_code_id">Please Select Country Code.</string>
    <string name="iamlookingfor">I am looking for</string>
    <string name="home">Home</string>
    <string name="provide_service_id">Please Select a Service*.</string>
    <string name="provide_category_id">Please Select a Category*.</string>
    <string name="provide_subcategory_id">Please Select a subCategory*.</string>
    <string name="select_valid_address">Please Enter a Valid Address.</string>
    <string name="provide_date">Please Provide Date.</string>
    <string name="provide_time">Please Provide Time.</string>
    <string name="no_services_found">No Services Found.</string>
    <string name="select_datea">Select Date*</string>
    <string name="select_date">Select Date</string>
    <string name="payment_method">Default Payment Method</string>
    <string name="address">Address</string>
    <string name="cash">Cash</string>
    <string name="can_not_edit_now">You can\'t edit profile now, Please try again later.</string>
    <string name="default_method">Default Method</string>
    <string name="update_profile">Update Profile</string>
    <string name="landmark">Landmark</string>
    <string name="error_connecting_api">Error contacting API: </string>
    <string name="provider_count">Provider(s) Found</string>
    <string name="no_provider_found">No Providers Found</string>
    <string name="status_accepted">Accepted</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_closed">Closed</string>
    <string name="status_completed">Completed</string>
    <string name="status_dispute">Dispute</string>
    <string name="status_pending">Pending</string>
    <string name="status_ongoing">Ongoing</string>
    <string name="status_rejected">Rejected</string>
    <string name="send_msg">Send Message</string>
    <string name="raise_dispute">Raise Dispute</string>
    <string name="category">Category</string>
    <string name="report_user">Report User</string>
    <string name="favourite">Favourite</string>
    <string name="start_service">Start Service</string>
    <string name="cancel">Cancel</string>
    <string name="view_dispute">View Dispute</string>
    <string name="view_summary">View Summary</string>
    <string name="provider_services">Provider Services</string>
    <string name="about_provider">About Provider</string>
    <string name="wallet_current_balance">Credits can be used for making new projects, and that can be redeem anytime.</string>
    <string name="wallet_fund_deposit">Credits to be redeemed at the end of the services</string>
    <string name="wallet_redeem_request">This is the balance which you have requested for redeem.</string>
    <string name="contact">Contact</string>
    <string name="time">Time</string>
    <string name="booked_time">Booked Time</string>
    <string name="price">Rate</string>
    <string name="payment_pref">Payment Preference</string>
    <string name="service_address">Service Address</string>
    <string name="cancel_by">Cancelled By</string>
    <string name="invalid_time">Time must be greater than current time</string>
    <string name="select_start_date_first">Please select service start time first.</string>
    <string name="please_select_time_and_address">Please select service time and address first.</string>
    <string name="current_bal">Current Balance</string>
    <string name="fund_deposit">Funds deposited</string>
    <string name="redeem_request">Redeem Request</string>
    <string name="deposit_fund">Deposit Fund</string>
    <string name="availbalance">Available Balance:</string>
    <string name="amount">Amount</string>
    <string name="desc">Description</string>
    <string name="submit">Submit</string>
    <string name="deposit_amount">Enter Deposit Amount*</string>
    <string name="type_messsage">Type a message here*</string>
    <string name="select_prize">Select Price</string>
    <string name="provide_subject">Please Provide Subject.</string>
    <string name="provide_desc">Please Provide Description.</string>
    <string name="error_required">*required</string>
    <string name="error_valid_email">*required valid email</string>
    <string name="error_min_pwd">*required minimum 6 characters</string>
    <string name="error_character_required">*only characters allowed</string>
    <string name="error_pwd_not_match">Password and Confirm Password must match</string>
    <string name="error_valid_contact_required">*required valid contact number</string>
    <string name="enter_price">Enter Price*</string>
    <string name="upload_image">Upload Image*</string>
    <string name="viewall"><u>View All</u></string>
    <string name="accept_dispute"><u>ACCEPT DISPUTE</u></string>
    <string name="escalate"><u>ESCALATE TO ADMIN</u></string>
    <string name="myrating">My Ratings &amp; Reviews</string>
    <string name="servicename">Service Name:</string>
    <string name="servicecat">Service Category:</string>
    <string name="servicetime">Service Time:</string>
    <string name="serviceprice">Service Price:</string>
    <string name="rate_provider">Please Rate the Provider</string>
    <string name="bycash">By Cash</string>
    <string name="bywallet">By Wallet</string>
    <string name="subject">Subject:</string>
    <string name="raised_by">Raised By:</string>
    <string name="total_earned">Total Earned</string>
    <string name="complete_service">Complete Services</string>
    <string name="commision">Commision</string>
    <string name="net_earned">Net Earned</string>
    <string name="no_of_book">No. of Bookings</string>
    <string name="rating_me">Ratings For Me</string>
    <string name="searh_service">Search Services...</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="end_service">End Service</string>
    <string name="add_review">Add Review</string>
    <string name="service_start_end">Service Start-End Time</string>
    <string name="about_me">About Me</string>
    <string name="service_time">Service Time</string>
    <string name="change_pass">Change Password</string>
    <string name="old_pass">Enter Old Password*</string>
    <string name="new_pass">Enter New Password*</string>
    <string name="confirmnew_pass">Re-Enter New Password*</string>
    <string name="cashon">Cash on Delivery</string>
    <string name="payment_gateway">Payment online via Payment Gateway</string>
    <string name="payment_id">Payment Gateway ID</string>
    <string name="change_lang">Change Language</string>
    <string name="email_noti1">Notify me when merchant accept/reject my requested service</string>
    <string name="email_noti2">Notify me when requested service is cancelled by the merchant/salon owner</string>
    <string name="email_noti3">Notify me for my upcoming booked service</string>
    <string name="partial_book">Booked Dates</string>
    <string name="booked_date">Booked Dates</string>
    <string name="free_date">Free Dates</string>
    <string name="str_and"> &amp; </string>
    <string name="aboutme">About Me</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="enter_duration">Enter Duration In Minute</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_discription">Enter Description*</string>
    <string name="reset">Reset</string>
    <string name="update">Update</string>
    <string name="no_record_founf">No Record Found</string>
    <string name="no_service">Not having any services</string>
    <string name="assigned_tasks">Assigned Tasks</string>
    <string name="available_on">Available On</string>
    <string name="positive_rating">Positive Rating</string>
    <string name="worked_on">Worked On Tasks</string>
    <string name="str_worked_on">Worked On</string>
    <string name="edit_service">Edit Service</string>
    <string name="add_new_service">Add New Service</string>
    <string name="select_category">Select Category*</string>
    <string name="locationa">Location</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="save_change">Save Change</string>
    <string name="current_password">Current Password*</string>
    <string name="re_enter_new_password">Re-Enter New Password*</string>
    <string name="admin_fees">Admin Fees</string>
    <string name="date">Date</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="requested_amount">Requested Amount</string>
    <string name="requested_date">Requested Date</string>
    <string name="redeemed_amount">Redeemed Amount</string>
    <string name="redeemed_date">Redeemed Date</string>
    <string name="minimum_rating">Minimum Rating</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="oops_brace_yourself_till_we_get_the_error_fixed">Oops..!! Brace yourself till we get the error fixed</string>
    <string name="please_retry_after_sometime">Please retry after sometime.</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="sort">You choose</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="name">Name</string>
    <string name="confirm_cancel_title">Confirm Cancellation</string>
    <string name="confirm_cancel_msg">Attention! You are about to cancel your booking. To proceed, type \'CANCELLA\' in the field below to confirm.</string>
    <string name="accept_cancel_terms">I accept the &lt;u&gt;cancellation terms&lt;/u&gt;</string>
</resources>