<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/amount"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/_12ssp"
        android:text="@string/admin_fees"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/_12ssp"
        android:text="@string/date"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/_12ssp"
        android:text="@string/transaction_id"
        android:textColor="@color/black" />
</LinearLayout>
