<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_request_amount_redeem"
            android:layout_width="@dimen/_130sdp"
            android:textSize="@dimen/_12ssp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/requested_amount" />

        <TextView
            android:id="@+id/txt_admin_fees_redeem"
            android:layout_width="@dimen/_130sdp"
            android:textSize="@dimen/_12ssp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/admin_fees" />

        <TextView
            android:id="@+id/txt_requested_date_redeem"
            android:layout_width="@dimen/_130sdp"
            android:textSize="@dimen/_12ssp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/requested_date" />

        <TextView
            android:id="@+id/txt_redeem_amount_redeem"
            android:layout_width="@dimen/_130sdp"
            android:textSize="@dimen/_12ssp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/redeemed_amount" />

        <TextView
            android:id="@+id/txt_redeem_date_redeem"
            android:layout_width="@dimen/_130sdp"
            android:textSize="@dimen/_12ssp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/redeemed_date" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/edit_border_color"/>
</LinearLayout>