<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_amount_deposit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_12ssp"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/txt_admin_fees_deposit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_12ssp"
            android:text="@string/admin_fees" />

        <TextView
            android:id="@+id/txt_date_deposit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_12ssp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/txt_transaction_id_deposit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_12ssp"
            android:text="@string/transaction_id" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/edit_border_color"/>
</LinearLayout>