<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_14sdp">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/font_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_cancel_title"
        android:textColor="@color/text"
        android:textSize="@dimen/_14ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/font_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/confirm_cancel_msg"
        android:textColor="@color/text_medium"
        android:textSize="@dimen/_11ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_accept_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_cancel_terms"
            style="@style/font_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:text="@string/accept_cancel_terms"
            android:textColor="@color/text_medium"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_confirm_cancel"
        style="@style/font_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:hint="CANCELLA"
        android:inputType="textCapCharacters"
        android:maxLines="1"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/edit_input_border"
        android:textColor="@color/text"
        android:textSize="@dimen/_12ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no"
            style="@style/font_regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/button_style_filltype"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/button"
            android:textSize="@dimen/_13ssp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/button_style_filltype_two">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_yes"
                style="@style/font_regular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
