<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:background="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_location"
                style="@style/StyledTilInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_14sdp"
                android:paddingEnd="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_7sdp">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/txt_location"
                    style="@style/StyledTilEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_location_resize"
                    android:drawablePadding="@dimen/_4sdp"
                    android:focusable="false"
                    android:hint="@string/locationa"
                    android:maxLines="3"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:textColor="@color/text"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_search_keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StyledTilInput"
                android:paddingStart="@dimen/_14sdp"
                android:paddingEnd="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:hint="@string/name">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/Edt_search_keyword"
                    style="@style/StyledTilEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="@color/text"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minimum_rating"
                android:layout_marginTop="@dimen/_7sdp"
                style="@style/font_regular"
                android:paddingStart="@dimen/_14sdp"
                android:paddingEnd="@dimen/_14sdp"
                android:textColor="@color/text"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingbar_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.5"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_3sdp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingStart="@dimen/_14sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort"
                    android:layout_marginTop="@dimen/_7sdp"
                    style="@style/font_regular"
                    android:textColor="@color/text"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_asc"
                    style="@style/font_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="7dp"
                    android:text="@string/ascending"
                    android:textColor="@color/text_light"
                    android:textSize="@dimen/_12ssp"
                    android:thumb="@drawable/custom_thumb"
                    app:track="@null" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_desc"
                    style="@style/font_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="7dp"
                    android:paddingBottom="7dp"
                    android:text="@string/descending"
                    android:textColor="@color/text_light"
                    android:textSize="@dimen/_12ssp"
                    android:thumb="@drawable/custom_thumb"
                    app:track="@null" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Btn_applyFilter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                style="@style/font_regular"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_14sdp"
                android:background="@drawable/button_style_filltype_two"
                android:textAllCaps="false"
                android:text="@string/apply_filter"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/BtnResetFilter"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                style="@style/font_regular"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:background="@drawable/button_style_filltype"
                android:textAllCaps="false"
                android:text="@string/reset_filter"
                android:textColor="@color/button"
                android:textSize="@dimen/_13ssp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >




            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</layout>